# auto-committer

./: .env  Cargo.toml
src/: main.rs
src/diff_getter/: mod.rs
src/model/: embedding.rs  llm.rs  mod.rs
