[package]
name = "code-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", features = ["json", "stream", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.4.0"
futures-util = "0.3"
tokio-stream = "0.1"
serde_json = "1.0"